frontends/web/src/routes/settings/manage-accounts.module.css
.addAccountBtn {
    margin-bottom: var(--space-half);
}

.accountNameInactive {
    color: var(--color-secondary);
}

.editAccount {
    align-items: baseline;
    display: flex;
}

.disabledText {
    color: var(--color-secondary);
    font-size: var(--size-small);
    margin: 0;
}

.walletHeader {
    align-items: flex-start;
    display: flex;
    justify-content: space-between;
    margin-bottom: var(--space-eight);
}

.walletTitle {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    font-size: 2rem;
    font-weight: 400;
    margin: 0 0 var(--space-quarter) 0;
    width: 50%;
}

.connectedKeystore {
    flex-wrap: wrap;
}

.keystoreName {
    margin-bottom: var(--space-eight);
    margin-right: var(--space-quarter);
}

.walletTitle small {
    color: var(--color-secondary);
    font-size: var(--size-default);
}

.setting {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    min-height: var(--item-height);
    padding: var(--space-quarter) 0;
}

.setting:not(:last-child) {
    border-bottom: solid 1px var(--background);
}

.coinLogo {
    display: block;
    position: relative;
    z-index: 2;
}

.accountLink {
    align-items: center;
    display: flex;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;
}

.editBtn {
    min-width: 0;
    padding: 0 0 0 var(--space-quarter);
}

.editBtn img {
    margin-right: var(--space-quarter);
    height: var(--size-default);
    vertical-align: text-bottom;
}

.toggleLabel {
    align-items: baseline;
    display: flex;
    justify-content: space-between;
}

.toggleLabelText {
    align-items: baseline;
    color: var(--color-secondary);
    display: flex;
}

.toggleLabelText img {
    color: var(--color-secondary);
    margin-right: var(--space-quarter);
    max-height: var(--size-default);
    height: auto;
    width: var(--size-default);
}

.toggle {
    flex-basis: 60px;
    flex-shrink: 0;
    margin-left: var(--space-quarter);
}

.accountActive {
    cursor: pointer;
}

.tokenSection {
    align-items: flex-start;
    display: flex;
    flex-basis: 100%;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 0 0 0 4px;
}

.tokenContainer {
    max-height: 0vh;
    overflow: hidden;
    transition: max-height .27s ease;
    width: 100%;
}

.tokenContainerOpen {
    /*
        a numeric value that is higher than the height of the token list,
        so the animation works nicely.
        could be also be a fixed high value, e.g. 3000rem
        i.e.
     */
    max-height: 200vh;
    padding: 10px 0 0 0;
}

.expandBtn {
    align-items: center;
    display: flex;
    gap: var(--space-quarter);
    height: 40px;
    padding: 0 var(--space-default);
}

.expandBtn,
.expandBtn:focus,
.expandBtn:hover {
    border-color: transparent !important;
    margin-left: 10px;
    outline: none;
}

.expandIcon {
    transition: transform 0.2s ease;
}

.expandIconOpen {
    transform: rotate(180deg);
}


.watchOnlyContainer {
    align-items: center;
    display: flex;
    justify-content: space-between;
    margin-top: var(--space-half);
}

.watchOnlyNote {
    margin: 0;
    margin-top: var(--space-half);
}

.watchOnlyAccountHidden {
    background-color: var(--color-success);
    margin-top: var(--space-half);
    padding: var(--space-half);
}

.watchOnlyAccountHidden p {
    color: var(--color-alt);
    margin: 0;
}

@media screen and (max-width: 768px) {
    .addAccountBtn {
        width: 100%;
    }
}

